# gtest_mockcpp_on_ndk

./: README.md
godsme-mockcpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
godsme-mockcpp/src/: CMakeCache.txt  InterfaceInfo.cpp  Makefile  cmake_install.cmake
mockcpp/: Android.mk  CMakeCache.txt  CMakeLists.txt  Makefile  clean.sh  cmake_install.cmake
mockcpp/cmake_config_ndk/: CMakeLists.txt  config.sh
mockcpp/cmake_config_ndk/src/: CMakeLists.txt
mockcpp/src/: CMakeLists.txt  InterfaceInfo.cpp  Makefile  cmake_install.cmake
mockcpp/src/ports/failure/: cppunit_report_failure.cpp
ndk-demo/: Android.mk  Application.mk  make.sh
ndk-demo/libs/armeabi-v7a/: demout
ndk-demo/src/: demo.cpp  demo.h
ndk-demo/ut/: demo_ut.cpp
